--- a/public_html/template.html
+++ b/public_html/template.html
@@ -48,7 +48,7 @@
 
       <footer class="footer">
         <small>
-          <time>
+          <time id="date">
             <!--TIME-->
           </time>
         </small>
